--- a/Learning React.js/Exercise Files/My Testing/hello-react/public/index.html
+++ b/Learning React.js/Exercise Files/My Testing/hello-react/public/index.html
@@ -5,6 +5,9 @@
       #heading{
         color: red;
       }
+      .cool-text{
+        font-family: "Monaco";
+      }
     </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
